# InnoiNVest

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
backend/: .env.example  package-lock.json  package.json
backend/data/: P15_-Populatia-rezidenta-pe-municipii-orase-si-comune-la-1-decembrie-2021-rezultate-provizorii.xlsx
backend/src/: app.js  index.js  server.js
backend/src/agents/: agent.runner.js  base.agent.js  inno.agent.js
backend/src/config/: database.js  redis.js  swagger.js
backend/src/constants/: cache.js  topics.js
backend/src/controllers/: agent.controller.js  chat.controller.js  city.controller.js  investment-report.controller.js  property.controller.js  report.controller.js  resource.controller.js
backend/src/docs/: openapi.js
backend/src/lib/: cache.js
backend/src/mcp/: server.js
backend/src/middleware/: errorHandler.js
backend/src/migrations/: runner.js  (+1 more)
config/: institutions.yaml  kpis.yaml
data/: siruta_nw_romania.csv  siruta_nw_romania_full.csv
db/migrations/: 001_init.sql  002_add_region_level.sql
docs/: data-categories.docx  data-categories.md
src/innoinvest/: cli.py  db.py  models.py  settings.py
tests/: conftest.py  test_cli_smoke.py  test_models_smoke.py
tests/api/: conftest.py  test_locations.py  test_reports.py
tests/export/: test_csv.py  test_docx.py
tests/ingest/: test_eurostat.py  test_ins_tempo.py  test_kpi_loader.py  test_locations_seed.py  test_runner.py
web/: Dockerfile  package-lock.json  package.json  vitest.config.ts
(+171 files in other folders)
